Fixed title getting cut off on small devices

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -47,6 +47,7 @@ main {
 
   div {
     max-width: 840px;
+    width: 97%;
     left: 0;
     display: flex;
 
